[tool.poetry]
name = "finddupes"
version = "0.1.0"
description = "Quickly Find duplicate files."
authors = ["David Baines <david_baines@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytest = "^8.4.1"
xxhash = "^3.5.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"
pyinstaller = "^6.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
